// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with logo 1`] = `
<DocumentFragment>
  <a
    class="FavoriteCard card"
    href="/artists/K8vZ9171o-f"
  >
    <div
      class="card-body"
    >
      <h6
        class="card-title"
      >
        Rithm School
        <img
          alt="Rithm School"
          class="float-right ml-5"
        />
      </h6>
      <p />
    </div>
  </a>
</DocumentFragment>
`;

exports[`matches snapshot without logo 1`] = `
<DocumentFragment>
  <a
    class="FavoriteCard card"
    href="/artists/K8vZ9171o-f"
  >
    <div
      class="card-body"
    >
      <h6
        class="card-title"
      >
        Algo School
        <img
          alt="Algo School"
          class="float-right ml-5"
        />
      </h6>
      <p />
    </div>
  </a>
</DocumentFragment>
`;
